--- a/index.html
+++ b/index.html
@@ -25,24 +25,27 @@
 
 
             <div class="bttn">
-        <input type="button" id="b1" onclick="clickEvent1();">
+        <input type="button" id="b1">       
         ROCK
                 </div>
     <div class="bttn">
-        <input type="button" id="b2" onclick="clickEvent2();">
+        <input type="button" id="b2">
         PAPER
                 </div>
 
                     <div class="bttn">
-        <input type="button" id="b3" onclick="clickEvent3();">
+        <input type="button" id="b3">
         SCISSORS
                 </div>
 
 
         </div>
+        
 </div>
    
-
+<div id="textboxt">
+        
+</div>
 
 
 
