--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         
 <div class="head">
         <div class="eye">
-                player
+                Player
         </div>
         <div class="eye">
-                VS?
+                VS
         </div>
         <div class="eye">
-                computer
+                Computer
         </div>
 </div>
 
