--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
                 <button id="playbutton"> Play</button>
          </div>
    
+ <div id="GARRET">
+         <div id="playerOption">
+
+         </div>
+         <div id="enemyOption">
+
+         </div>
+ </div>
+
+
 <div id="textboxt">
         
 </div>
